Commit Link Update

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <link href="https://fonts.googleapis.com/css?family=Damion" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="resources/css/reset.css" type="text/css">
-  <link rel="stylesheet" href="resources/css/style.css" type="text/css">
+  <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
+  <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   <title>Fotomatic</title>
 </head>
 <body>
